WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
308967
RealtimeOutgoingAudioSourceCocoa::pullAudioData should check for its buffer size before trying to grow it
https://bugs.webkit.org/show_bug.cgi?id=308967
Summary
RealtimeOutgoingAudioSourceCocoa::pullAudioData should check for its buffer s...
youenn fablet
Reported
2026-03-02 06:46:47 PST
RealtimeOutgoingAudioSourceCocoa::pullAudioData should check for its buffer size before trying to grow it
Attachments
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2026-03-02 06:47:31 PST
<
rdar://171286464
>
youenn fablet
Comment 2
2026-03-02 06:50:20 PST
Pull request:
https://github.com/WebKit/WebKit/pull/59708
EWS
Comment 3
2026-03-03 06:56:54 PST
Committed
308543@main
(55a08bb37494): <
https://commits.webkit.org/308543@main
> Reviewed commits have been landed. Closing PR #59708 and removing active labels.
EWS
Comment 4
2026-03-03 12:18:42 PST
Committed
305413.390@safari-7624-branch
(f03db880210a): <
https://commits.webkit.org/305413.390@safari-7624-branch
> Reviewed commits have been landed. Closing PR #4596 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug