Cherry-pick 55a08bb37494. rdar://171620959

RealtimeOutgoingAudioSourceCocoa::pullAudioData should check for its buffer size before trying to grow it
    rdar://171286464
    https://bugs.webkit.org/show_bug.cgi?id=308967

    Reviewed by Eric Carlson.

    Vector::growImpl checks that the new size is above the current size and asserts if not the case.
    We add a similar check at call site.

    Canonical link: https://commits.webkit.org/308543@main

Canonical link: https://commits.webkit.org/305413.379@safari-7624.1.16.11-branch